--- a/app/src/main/res/drawable/radio_flat_selected.xml
+++ b/app/src/main/res/drawable/radio_flat_selected.xml
@@ -3,5 +3,5 @@
     <corners
         android:radius="5dp" />
     <solid
-        android:color="@color/colorInfo"/>
+        android:color="@color/colorPrimaryLight"/>
 </shape>
