--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorSecondary">#6c757d</color>
     <color name="colorSuccess">#28a745</color>
     <color name="colorInfo">#17a2b8</color>
-    <color name="colorDanger">#F44336</color>
+    <color name="colorDanger">#AC170B</color>
     <color name="colorLight">#f8f9fa</color>
     <color name="colorDark">#343a40</color>
     <color name="colorSelected">#217938</color>
@@ -13,11 +13,11 @@
 
 
     <color name="colorPrimary">#125688</color>
-    <color name="colorPrimaryLight">#2879B5</color>
+    <color name="colorPrimaryLight">#136FB5</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#c8e8ff</color>
-    <color name="background">#DDD</color>
+    <color name="background">#FFF</color>
 
 </resources>
